--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["airbnb-base", "plugin:prettier/recommended"],
+    "extends": ["airbnb-base", "plugin:prettier/recommended", "react-app"],
     "env": {
         "es6": true,
         "jest": true
