--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "axios": "^0.21.1",
+        "connected-react-router": "^6.8.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
         "react-scripts": "4.0.1",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-persist": "^6.0.0",
+        "redux-saga": "^1.1.3",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
@@ -39,7 +46,9 @@
         "eslint": "^7.17.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
         "prettier": "2.2.1"
     }
 }
